--- a/public/index.html
+++ b/public/index.html
@@ -50,18 +50,18 @@
 
             <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
                  <ul class="navbar-nav ml-auto">
-                     <li class="nav-item">
+                     <!-- <li class="nav-item">
                         <a class="nav-link page-scroll" href="#header">Home <span class="sr-only">(current)</span></a>
                     </li> 
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="#features">Features</a>
-                    </li>
-                    <li class="nav-item">
+                    </li> -->
+                    <!-- <li class="nav-item">
                         <a class="nav-link page-scroll" href="#details">Details</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="#pricing">Pricing</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Drop</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown01">
